--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: relative;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+}
+
+#title {
+  position: relative;
+  margin: 0 auto;
+  margin-top: 50px;
+  text-align: center;
+  font-size: 36px;
+  padding-bottom: 50px;
+}
+
+.container {
+  padding: 20px;
+  margin: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+textarea {
+  font-size: 20px;
+  width: 400px;
+  height: 150px;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.b-28 {
+  font-weight: bold;
+  font-size: 28px;
+}
+
+.field-number {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.number {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.btn {
+  font-size: 32px;
+  color: black;
+  border: none;
+  height: 100%;
+  width: 40px;
   color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  background: #e0e0e0;
+  box-shadow: 3px 3px 6px #bebebe, -3px -3px 6px #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover {
+  background: linear-gradient(145deg, #cacaca, #f0f0f0);
+  box-shadow: 3px 3px 6px #bebebe, -3px -3px 6px #ffffff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:active {
+  background: #e0e0e0;
+  box-shadow: inset 3px 3px 6px #bebebe, inset -3px -3px 6px #ffffff;
 }
