--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ textarea {
   border-radius: 5px;
   background: #e0e0e0;
   box-shadow: 3px 3px 6px #bebebe, -3px -3px 6px #ffffff;
+  transition: all .3s;
 }
 
 .btn:hover {
